exclude .idea from git
removed .idea from git index

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ launch.json
 30_sources/SRC_Zupfnoter/sf2_sources/wav/01_solo-G1.wav
 30_sources/SRC_Zupfnoter/sf2_sources/*/*
 30_sources/SRC_Zupfnoter/src/.sass-cache
+.idea
