see #241 now build_worker also does a git_describe to get the correct version descriptor

--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -80,6 +80,7 @@ end
 
 desc "Build Worker"
 task :build_worker do
+  git_describe
 
   File.open(ZNWORKER_JS, "w+") do |out|
     Opal.append_path "."
