updated gem file to include rb-readline
this was necessary after home-brew kille one of the liberties

Sorry, you can't use Pry without Readline or a compatible library.
Possible solutions:
 * Rebuild Ruby with Readline support using `--with-readline`
 * Use the rb-readline gem, which is a pure-Ruby port of Readline
 * Use the pry-coolline gem, a pure-ruby alternative to Readline
/Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/config/default.rb:147:in `require': dlopen(/Users/beweiche/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/x86_64-darwin15/readline.bundle, 9): Library not loaded: /usr/local/opt/readline/lib/libreadline.7.dylib (LoadError)
  Referenced from: /Users/beweiche/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/x86_64-darwin15/readline.bundle
  Reason: image not found - /Users/beweiche/.rvm/rubies/ruby-2.4.1/lib/ruby/2.4.0/x86_64-darwin15/readline.bundle
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/config/default.rb:147:in `lazy_readline'
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/config/default.rb:9:in `block in <class:Default>'
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/config/memoization.rb:27:in `instance_eval'
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/config/memoization.rb:27:in `block (2 levels) in def_memoized'
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/config/behavior.rb:204:in `public_send'
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/config/behavior.rb:204:in `method_missing'
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/history.rb:19:in `restore_default_behavior'
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/history.rb:14:in `initialize'
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/pry_class.rb:42:in `new'
        from /Users/beweiche/.rvm/gems/ruby-2.4.1/gems/pry-0.12.2/lib/pry/pry

--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -19,6 +19,7 @@ gem 'bundler'
 gem 'redcarpet'
 gem 'json-schema-generator'
 gem 'neatjson'
+gem 'rb-readline'
 
 
 # had trouble to install nokogiri on windows
