update to Wortsammler 2.0.0-dev1
some editorial stuff

--- a/30_sources/ZSUPP_Manifests/UD_zupfnoter.yaml
+++ b/30_sources/ZSUPP_Manifests/UD_zupfnoter.yaml
@@ -7,7 +7,7 @@
         - html
 
     :vars: 
-        :lang: german
+        :lang: de-de
         :fontsize: 12pt
         :mainfont: Calibri
         :sansfont: Calibri
