--- a/30_sources/SRC_Zupfnoter/Gemfile
+++ b/30_sources/SRC_Zupfnoter/Gemfile
@@ -25,5 +25,5 @@ gem 'rb-readline'
 # had trouble to install nokogiri on windows
 # so I build the manual on mac os only
 install_if -> { RUBY_PLATFORM =~ /darwin/ } do
-  gem 'wortsammler', "~> 1.0.3"
-end
+  gem 'wortsammler', "~> 2.0.0.dev1"
+  end
