updated dependecies brought by opal 1.0
uglifyjs still does not work with build_cli

--- a/30_sources/SRC_Zupfnoter/src/package.json
+++ b/30_sources/SRC_Zupfnoter/src/package.json
@@ -11,7 +11,8 @@
     "blob": "^0.0.4",
     "encoding": "^0.1.12",
     "glob": "^7.1.3",
-    "jspdf": "^1.5.3"
+    "jspdf": "^1.5.3",
+    "unxhr": "^1.0.1"
   },
   "devDependencies": {
     "browserify": "^16.2.3",
