--- a/30_sources/SRC_Zupfnoter/src/package.json
+++ b/30_sources/SRC_Zupfnoter/src/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "browserify": "^16.2.3",
-    "uglify-js": "^2.8.29"
+    "uglify-js": "github:mishoo/UglifyJS2#harmony"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
