--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 30_sources/SRC_Zupfnoter/src/.sass-cache/df9ce2c22da110915187d99402413dd6d9081360/reset.sassc
 30_sources/SRC_Zupfnoter/assets/.sass-cache/b473c0785fbcfc41f6599b88c8fd933f27d329c7/index.scssc
 30_sources/SRC_Zupfnoter/assets/.sass-cache/b473c0785fbcfc41f6599b88c8fd933f27d329c7/reset.sassc
-Gemfile.lock
+#Gemfile.lock
 .idea
 30_sources/SRC_Zupfnoter/deploy_files/index.html
 30_sources/SRC_Zupfnoter/deploy_files/public/build.js
