--- a/30_sources/SRC_Zupfnoter/src/package.json
+++ b/30_sources/SRC_Zupfnoter/src/package.json
@@ -10,8 +10,9 @@
     "ajv": "^4.8.2",
     "blob": "^0.0.4",
     "encoding": "^0.1.12",
-    "glob": "^7.1.3",
+    "glob": "^7.1.6",
     "jspdf": "^1.5.3",
+    "uglify-es": "github:mishoo/UglifyJS2#harmony",
     "unxhr": "^1.0.1"
   },
   "devDependencies": {
