added abc2svg v. 1.20.7-0f20d2039c

--- a/30_sources/SRC_Zupfnoter/src/package.json
+++ b/30_sources/SRC_Zupfnoter/src/package.json
@@ -11,6 +11,7 @@
     "blob": "^0.0.4",
     "encoding": "^0.1.12",
     "glob": "^7.1.6",
+    "jscs": "^3.0.7",
     "jspdf": "^1.5.3",
     "uglify-es": "github:mishoo/UglifyJS2#harmony",
     "unxhr": "^1.0.1"
