--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -43,35 +43,47 @@ task :updateLocales do
   end
 end
 
-desc "Update abc2svg from git clone"
+desc "Update abc2svg from fossil clone"
 task :updateAbc2svg do
-  abc2svgrepo  = "../../../../200_zupfnoter_external_components/abc2svg"
-  abc2svg_file = "abc2svg-1.js"
-  sources      = [abc2svg_file, "json-1.js", "setmidi-1.js", "play-1.js"]
+  abc2svg_fossil = "../../../../200_zupfnoter_external_components/abc2svg"
+  abc2svg_git    = "#{abc2svg_fossil}/../abc2svg_git"
+  abc2svg_file   = "abc2svg-1.js"
+  sources        = [abc2svg_file, "json-1.js", "setmidi-1.js", "play-1.js"]
   # ignore some modules (not working, not relevant for zupfnoter audience)
   # permap does not work in zupfnoter
   # ps-interpreter will not be used by zupfnoter audience
   ignore      = ['wps-1.js', 'perc-1.js', 'strftime-1.js']
   temp_ignore = ['psvg-1.jsx']
-  sources     += Dir["#{abc2svgrepo}/modules/*.js"].map { |f| File.basename(f, '.js') + "-1.js" } - temp_ignore - ignore # add failing modules to [] to ignore them
+  sources     += Dir["#{abc2svg_git}/modules/*.js"].map { |f| File.basename(f, '.js') + "-1.js" } - temp_ignore - ignore # add failing modules to [] to ignore them
 
-  cd abc2svgrepo do
+  cd abc2svg_fossil do
+    puts "updating fossil and mirror to git"
+    cmd = "fossil up"
+    cmd = "fossil git export"
+    sh cmd
+  end
+
+  cd abc2svg_git do
+    puts "checkout git"
+    sh 'git checkout'
     sources.each { |f| sh " rm #{f} ; NOMIN=1 #{NINJAEXEC} #{f}" }
   end
+
 
   ["de", "en"].each do |lang|
     File.open(%Q{localization/abc2svg_#{lang}-#{lang}.json}, "w") do |f|
       f.puts ("{")
-      f.puts File.read(%Q{#{abc2svgrepo}/err-#{lang}.js}).gsub("user.textrans = ", %Q{"phrases":})
+      f.puts File.read(%Q{#{abc2svg_git}/err-#{lang}.js}).gsub("user.textrans = ", %Q{"phrases":})
       f.puts ("}")
     end
   end
+
 
   File.open("#{VENDORFOLDER}/#{abc2svg_file}", "w") do |f|
     f.puts "// compiled for Zupfnoter #{Time.now}"
     [sources].flatten.each do |s|
       puts "copying #{s}"
-      f.puts File.read("#{abc2svgrepo}/#{s}")
+      f.puts File.read("#{abc2svg_git}/#{s}")
     end
   end
 
@@ -113,7 +125,7 @@ task :build => [:buildConfigDoc, :updateLocales, :build_worker, :build_cli] do
 
   Dir.glob "../public/*.scss" do |f|
     cmd = "sass #{f} > #{File.dirname(f)}/#{File.basename(f, ".scss")}.css"
-    puts sh cmd  # todo: improve error messages
+    puts sh cmd # todo: improve error messages
   end
 end
 
