adapted abc2svg: 1.20.8- Git: v1.20.8-20-g5c4a69a

--- a/30_sources/SRC_Zupfnoter/src/Rakefile
+++ b/30_sources/SRC_Zupfnoter/src/Rakefile
@@ -60,6 +60,7 @@ task :updateAbc2svg do
   cd abc2svg_fossil do
     puts "updating fossil and mirror to git"
     cmd = "fossil up"
+    sh cmd
     cmd = "fossil git export"
     sh cmd
   end
